Setting template for ability to duplicate

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@
 }
 
 body {
-  background: url('backgrounds/hearts-bg.png');
-  background-position: 45% 25%;
-  background-size: 75%;
+  background: url('backgrounds/simple-wallpaper.jpg');
+  /* background-position: 45% 25%;
+  background-size: 75%; */
 }
